--- a/client-ts/FunctionalTests/wwwroot/default.html
+++ b/client-ts/FunctionalTests/wwwroot/default.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width">
     <title>SignalR Client End-to-End tests</title>
     <link rel="stylesheet" href="lib/jasmine/jasmine.css" />
+</head>
+
+<body>
+
     <script type="text/javascript" src="lib/jasmine/jasmine.js"></script>
     <script type="text/javascript" src="lib/jasmine/jasmine-html.js"></script>
     <script type="text/javascript" src="lib/jasmine/boot.js"></script>
@@ -24,15 +28,12 @@
         }
 
         var minified = getParameterByName('release') === 'true' ? '.min' : '';
+        var cacheBust = Math.random().toString().substring(2);
         document.write(
-            '<script type="text/javascript" src="lib/signalr/signalr' + minified + '.js"><\/script>' +
-            '<script type="text/javascript" src="lib/signalr/signalr-protocol-msgpack' + minified + '.js"><\/script>');
+            '<script type="text/javascript" src="lib/signalr/signalr' + minified + '.js?' + cacheBust + '"><\/script>' +
+            '<script type="text/javascript" src="lib/signalr/signalr-protocol-msgpack' + minified + '.js?' + cacheBust + '"><\/script>' +
+            '<script type="text/javascript" src="dist/signalr-functional-tests.js?' + cacheBust + '"><\/script>');
     </script>
-
-    <script src="dist/signalr-functional-tests.js"></script>
-</head>
-
-<body>
 </body>
 
 </html>
