--- a/samples/SignalRSamples/wwwroot/index.html
+++ b/samples/SignalRSamples/wwwroot/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <h1>ASP.NET Core Sockets</h1>
+    <h1>ASP.NET Core Connections</h1>
     <ul>
         <li><a href="sockets.html?transport=LongPolling">Long polling</a></li>
         <li><a href="sockets.html?transport=ServerSentEvents">Server Sent Events</a></li>
